# codegen-lib-poc

./: .gitignore
codegen-sample/: CMakeLists.txt  CMakeSettings.json  README.md  digitaltwin_client_helper.c  digitaltwin_client_helper.h  dps_prov.c  dps_prov.h  main.c  pnp_device.c  pnp_device.h  pnp_schema_types.h  pocDevice_impl.c  pocDevice_impl.h
codegen-sample/az_core/: CMakeLists.txt
codegen-sample/capabilities/: CMakeLists.txt  device_capabilities.c  device_capabilities.h
codegen-sample/interface/: CMakeLists.txt  digitaltwin_client_helper.c  digitaltwin_client_helper.h  pocsensor_interface.c  pocsensor_interface.h
codegen-sample/modellib/: digitaltwin_serializer.c  digitaltwin_serializer.h  pnp_schema_types.h
codegen-sample/port/: pocDevice_impl.c  pocDevice_impl.h
codegen-sample/serializer/: CMakeLists.txt  pocsensor_serializer.c  pocsensor_serializer.h
codegen-sample/utilities/: digitaltwin_serializer.c  digitaltwin_serializer.h  pocinterface_interface.c  pocinterface_interface.h
existing-app/: CMakeLists.txt  device_capability.c  device_capability.h  main.c
existing-app2/: CMakeLists.txt
jsonld/v1/: pocCapabilityModel.json
jsonld/v2/: InterfaceComponentEmbeddedV2.json  deviceInfoInterface.json  pocInterface.json
